<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/question_1"
            style="@style/question_container">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_1" />

            <RadioGroup
                android:id="@+id/question_1_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question_1_answer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Blue background with yellow star in centre" />

                <RadioButton
                    android:id="@+id/question_1_answer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Green background with red circle in centre" />

                <RadioButton
                    android:id="@+id/question_1_answer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Red background with white circle in centre" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_2"
            style="@style/question_container">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_2" />

            <RadioGroup
                android:id="@+id/question_2_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_2_answer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1947" />

                <RadioButton
                    android:id="@+id/question_2_answer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1971" />

                <RadioButton
                    android:id="@+id/question_2_answer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1952" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_3"
            style="@style/question_container">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_3" />

            <RadioGroup
                android:id="@+id/question_3_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_3_answer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Buddism" />

                <RadioButton
                    android:id="@+id/question_3_answer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Islam" />

                <RadioButton
                    android:id="@+id/question_3_answer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Hinduism" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_4"
            style="@style/question_container">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_4" />

            <RadioGroup
                android:id="@+id/question_4_radio_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/question_4_answer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Brahmaputra" />

                <RadioButton
                    android:id="@+id/question_4_answer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Padma" />

                <RadioButton
                    android:id="@+id/question_4_answer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Surma" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_5"
            style="@style/question_container">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/question_5_answer_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UTC + 5" />

                <CheckBox
                    android:id="@+id/question_5_answer_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UTC + 6" />

                <CheckBox
                    android:id="@+id/question_5_answer_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="UTC + 4" />

                <CheckBox
                    android:id="@+id/question_5_answer_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="GMT + 6" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/question_6"
            style="@style/question_container">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question_6" />


            <EditText
                android:id="@+id/question_6_answer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <Button
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Submit"
            android:onClick="checkAnswer"/>

    </LinearLayout>
</ScrollView>